add all to agenda by organizer
